[package]
authors = ["chevdor <chevdor@gmail.com>"]
name = "subrpc"
version = "0.0.4"
edition = "2021"
description = "subrpc is a cli"
homepage = "https://github.com/chevdor/subrpc"
keywords = ["chevdor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subrpc"

[dependencies]
env_logger = "0.10"
log = "0.4"
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
color-eyre = "0.6.2"
subrpc-core = { path = "../subrpc-core", version = "0"}
webbrowser = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
