[package]
name = "subrpc"
description = "subrpc is a cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
color-eyre = "0.6"
subrpc-core = { path = "../subrpc-core", version = "0"}
webbrowser = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
