[package]
name = "subrpc"
description = "subrpc to manage and update remote registries for RPC endpoints"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
clap = { version = "4.5.28", features = ["derive", "env", "unicode", "cargo"] }
color-eyre = "0.6.3"
subrpc-core = { path = "../subrpc-core", version = "0"}
webbrowser = "1.0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
assert_cmd = "2.0.16"
