[package]
name = "subrpc-core"
description = "subrpc-core is a lib"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt"], default-features = false }
jsonrpsee = { version = "0.22", git = "https://github.com/paritytech/jsonrpsee", features = [
    "client",
] }
anyhow = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json", "default-tls"], default-features = false }
