[package]
authors = ["Wilfried Kopp <wilfried@parity.io>"]
name = "subrpc-lib"
version = "0.0.1"
edition = "2021"
description = "subrpc-lib is a lib"
homepage = "https://github.com/Wilfried Kopp/subrpc-lib"
keywords = ["Wilfried Kopp"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Wilfried Kopp/subrpc-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
